<resources>
    <string name="app_name">TestTaskStackoverflow</string>

    <!--activities-->
    <string name="search_title">Поиск:</string>
    <string name="search_hint">введите запрос</string>
    <string name="desc_btn_search">Найти</string>
    <string name="bookmarks">Избранное</string>
    <string name="desc_img_star">Избранное</string>
    <string name="desc_btn_clear">Очистить</string>

    <!--Toasts-->
    <string name="add_bm">Добавлено в избранное</string>
    <string name="exist_bm">Уже в избранном</string>
    <string name="remove_bm">Удалено из избранного</string>

    <!--more_item-->
    <string name="btn_more">Загрузить еще</string>

    <!--search_item-->
    <string name="votes">votes</string>
    <string name="asked_by_user">asked %1$s by %2$s</string>
    <string name="tags">Tags:</string>
    <string name="title_Q">Q: %1$s</string>

    <!--menu-->
    <string name="action_delete_bm">Удалить</string>
    <string name="action_add_bm">В избранное</string>
</resources>
