<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    android:focusable="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include layout="@layout/app_bar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="54dp"
            android:layout_marginEnd="54dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_title"
                android:textSize="16sp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tilSearchText"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:hint="@string/search_hint"
                android:textSize="16sp"
                android:background="@android:color/transparent" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/btnClear"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_close"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc_btn_clear"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/colorSecondaryText"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvSearchList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    </RelativeLayout>

</LinearLayout>